--- a/styles/_customSelect.style.scss
+++ b/styles/_customSelect.style.scss
@@ -8,143 +8,74 @@
   margin-bottom: 1rem;
 }
 
-#sortSelector {
-  position: relative;
-  padding: 1rem 3rem;
+select {
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.9);
+  font-size: 1.5rem;
+  padding: 1em 3em 1em 1.5em;
+  background-color: #901c1c;
   color: white;
-  font-size: 1rem;
-  border-radius: 5px;
-
-  background-color: #911c1c;
-
-  li {
-    list-style-type: none;
-  }
-}
-
-.select {
-  width: 170px;
-  height: 73px;
+  border: 0;
   cursor: pointer;
-  background-color: #911c1c;
-  border-radius: 5px;
-  position: relative;
-  &_expand {
-    width: 0;
-    height: 69px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    &::after {
-      font-family: "Font Awesome 5 Free";
-      font-weight: 900;
-      content: "\f104";
-      position: absolute;
-      top: 50%;
-      right: 18px;
-      transform: translate(-50%, -50%) rotate(90deg);
-      color: #fff;
-      font-size: 20px;
-      pointer-events: none;
-      z-index: 2;
-      color: #fff;
-      transition: all 250ms ease-in-out;
-    }
-    &:checked::after {
-      transform: translate(-50%, -50%) rotate(90deg) scaleX(-1);
-    }
-  }
-  &_expandLabel {
-    display: block;
-    width: 100%;
-    height: 69px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    cursor: pointer;
-  }
-  &_close {
-    display: none;
-  }
-  &_closeLabel {
-    width: 170px;
-    height: 69px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: none;
-  }
-  &_items {
-    width: 170px;
-    height: 69px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 5px;
-    padding-top: 69px;
-  }
-  &_input {
-    display: none;
-  }
-  &_label {
-    display: block;
-    height: 0;
-    font-size: 1.2rem;
-    line-height: 69px;
-    overflow: hidden;
-    color: #fff;
-    background-color: #fff;
-    cursor: pointer;
-    padding-left: 20px;
-    &-placeholder {
-      height: 69px;
-      vertical-align: middle;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: transparent;
-    }
-  }
-  &_expand:checked {
-    + .select_closeLabel {
-      display: block;
-      + .select_options {
-        background: #911c1c;
-        border-radius: 0 0 5px 5px;
-        .select_label {
-          height: 69px;
-          background: transparent;
-          &:hover {
-            background-color: #db8876;
-            color: #000;
-          }
-        }
-        + .select_expandLabel {
-          display: none;
-        }
-        + .select_option {
-          border-radius: 5px;
-        }
-        .select_option:nth-child(2) .select_label:hover {
-          border-radius: 0 0 5px 5px;
-        }
-      }
-    }
-  }
-  &_input:checked + .select_label {
-    height: 69px;
-    margin-top: -69px;
-    background-color: #911c1c;
-    border-radius: 5px;
-  }
-  .border-top {
-    display: block;
-    height: 100%;
-    width: 85%;
-    border-top: 1px solid #fff;
-  }
 }
 
-.select_input:checked + .select_label .border-top {
-  border-top: none;
+.custom-select {
+  position: relative;
+}
+
+.custom-arrow {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 4em;
+  height: 100%;
+
+  pointer-events: none;
+  background-color: #901c1c;
+}
+
+.custom-arrow::before,
+.custom-arrow::after {
+  --size: 0.65em;
+
+  content: "";
+  position: absolute;
+  // width: 1rem;
+  // height: 1rem;
+  // background-color: aqua;
+  top: 40%;
+  left: 40%;
+  // transform: translate(-50%, -50%);
+}
+
+.custom-arrow::before {
+  background: url(../assets/images/arrow-white.svg) center center / 100% 100%
+    no-repeat transparent;
+  width: 1rem;
+  height: 1rem;
+  border: none;
+  transform: rotate(90deg);
+}
+
+// .custom-arrow::before {
+//   border-left: var(--size) solid transparent;
+//   border-right: var(--size) solid transparent;
+//   border-bottom: var(--size) solid rgba(255, 255, 255, 0.5);
+
+//   top: 40%;
+// }
+
+// .custom-arrow::after {
+//   border-left: var(--size) solid transparent;
+//   border-right: var(--size) solid transparent;
+//   border-top: var(--size) solid rgba(255, 255, 255, 0.5);
+
+//   top: 60%;
+// }
+
+.option {
+  display: block;
+  padding: 1rem;
+  background-color: aliceblue;
+  font-size: 4rem;
 }
