contact modal & form

--- a/styles/global.css
+++ b/styles/global.css
@@ -690,6 +690,7 @@ form button:focus {
       -ms-flex-align: center;
           align-items: center;
   gap: 1rem;
+  margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
