--- a/styles/_base.style.scss
+++ b/styles/_base.style.scss
@@ -18,8 +18,9 @@ body {
   margin: 0 auto;
   padding: 0 1rem;
   font-family: "DM Sans", sans-serif;
+  font-weight: 400;
   font-size: 16px;
-  background-color: fafafa;
+  background-color: $color-background;
 }
 
 h1,
