--- a/styles/_header.style.scss
+++ b/styles/_header.style.scss
@@ -4,11 +4,15 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 90px;
+
+  a:focus {
+    @include focus;
+  }
 }
 
 h1 {
   font-size: 2.25rem;
-  color: #901c1c;
+  color: $clr-primary;
 }
 
 .logo {
