--- a/styles/_home.style.scss
+++ b/styles/_home.style.scss
@@ -3,14 +3,19 @@
   grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   gap: 70px;
   margin-top: 100px;
-}
+  margin-bottom: 150px;
 
-.photographer_section article {
-  display: flex;
-  justify-self: center;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  article {
+    display: flex;
+    justify-self: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    a:focus {
+      @include focus;
+    }
+  }
 }
 
 .photographer_section article img {
@@ -18,10 +23,12 @@
   height: 350px;
   border-radius: 50%;
   object-fit: cover;
+
+  @include shadow;
 }
 
 .photographer_section article h2 {
-  color: #d3573c;
+  color: $clr-secondary;
   font-size: 36px;
   margin: 1rem 0;
   white-space: nowrap;
@@ -50,21 +57,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 0.5rem;
 }
 
 .card__location {
   font-size: 1.35rem;
-  color: #901c1c;
-}
-
-.card__tagline {
+  color: $clr-primary;
 }
 
 .card__price {
-  color: gray;
+  color: $clr-gray-light;
   font-size: 0.9rem;
 }
-
-/* @media screen and (max-width: 640px) {
-  
-  } */
