--- a/styles/global.css
+++ b/styles/global.css
@@ -17,8 +17,9 @@ body {
   margin: 0 auto;
   padding: 0 1rem;
   font-family: "DM Sans", sans-serif;
+  font-weight: 400;
   font-size: 16px;
-  background-color: fafafa;
+  background-color: #fafafa;
 }
 
 h1,
@@ -65,6 +66,11 @@ header {
   height: 90px;
 }
 
+header a:focus {
+  outline: 3px solid #db8876;
+  border-radius: 2px;
+}
+
 h1 {
   font-size: 2.25rem;
   color: #901c1c;
@@ -81,6 +87,7 @@ h1 {
       grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   gap: 70px;
   margin-top: 100px;
+  margin-bottom: 150px;
 }
 
 .photographer_section article {
@@ -100,12 +107,19 @@ h1 {
           flex-direction: column;
 }
 
+.photographer_section article a:focus {
+  outline: 3px solid #db8876;
+  border-radius: 2px;
+}
+
 .photographer_section article img {
   width: 350px;
   height: 350px;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-box-shadow: 0 0 6px rgba(128, 128, 128, 0.5);
+  box-shadow: 0 0 6px rgba(128, 128, 128, 0.5);
 }
 
 .photographer_section article h2 {
@@ -156,6 +170,7 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 0.5rem;
 }
 
 .card__location {
@@ -164,13 +179,10 @@ h1 {
 }
 
 .card__price {
-  color: gray;
+  color: #757575;
   font-size: 0.9rem;
 }
 
-/* @media screen and (max-width: 640px) {
-  
-  } */
 .photograph__header {
   position: relative;
 }
