photographer page html & css

--- a/styles/_variables.style.scss
+++ b/styles/_variables.style.scss
@@ -4,7 +4,7 @@ $clr-gray: #525252;
 $clr-white: #fafafa;
 
 $color-text-light: $clr-gray;
-$color-background: $clr-white;
+$color-background: white;
 
 $color-button: rgb(144, 28, 28);
 $color-button-hover: rgb(219, 136, 118);
