--- a/styles/_photographer.style.scss
+++ b/styles/_photographer.style.scss
@@ -1,16 +1,17 @@
-.photograph__header {
+.photographer__header {
   position: relative;
+  margin-top: 1rem;
 }
 
-.photograph-header {
+.photographer-header {
   display: grid;
   grid-template-columns: 1.5fr 1fr 1fr;
   align-items: center;
 
-  background-color: #fafafa;
+  background-color: $clr-white;
 
-  height: 300px;
-  padding: 0 3.1rem;
+  // height: 300px;
+  padding: 3rem 3.1rem;
 
   .desc {
     display: flex;
@@ -19,12 +20,12 @@
 
     h1 {
       font-size: 4rem;
-      color: #d3573c;
+      color: $clr-secondary;
     }
 
     &__location {
       font-size: 1.5rem;
-      color: #901c1c;
+      color: $clr-primary;
     }
 
     &__tagline {
@@ -46,8 +47,14 @@
 
     cursor: pointer;
 
+    &:hover {
+      background-color: $color-button-hover;
+      color: black;
+    }
+
     &:focus {
-      border: 2px solid black;
+      background-color: $color-button-hover;
+      @include focus;
     }
   }
 
@@ -69,6 +76,7 @@
 
   background-color: #fafafa;
   width: 100%;
+  margin-bottom: 150px;
 
   .photograph-media-card {
     display: flex;
@@ -84,6 +92,10 @@
       object-fit: cover;
       border-radius: 5px;
       cursor: pointer;
+
+      &:focus {
+        @include focus;
+      }
     }
 
     video {
@@ -91,6 +103,11 @@
       height: 250px;
       object-fit: cover;
       border-radius: 5px;
+      cursor: pointer;
+
+      &:focus {
+        @include focus;
+      }
     }
 
     .desc__wrapper {
@@ -130,10 +147,7 @@
   }
 }
 
-//
-//
-//
-.photograph-infos {
+.photographer-infos {
   display: flex;
   justify-content: space-between;
   align-items: center;
