--- a/styles/_customSelect.style.scss
+++ b/styles/_customSelect.style.scss
@@ -1,5 +1,5 @@
-$color-button: rgb(144, 28, 28);
-$color-button-hover: rgb(219, 136, 118);
+// $color-button: rgb(144, 28, 28);
+// $color-button-hover: rgb(219, 136, 118);
 
 .dropdown-menu__container {
   display: flex;
