--- a/styles/_photographer.style.scss
+++ b/styles/_photographer.style.scss
@@ -90,10 +90,13 @@
     .videoWarning {
       position: absolute;
       top: 40%;
-      left: 35%;
+      left: 45%;
       color: white;
-      font-size: 2rem;
+      font-size: 1.5rem;
+      user-select: none;
+      z-index: 0;
     }
+
     img {
       width: 300px;
       height: 250px;
@@ -128,7 +131,7 @@
       .desc__title {
         max-width: 250px;
 
-        font-size: 1.5rem;
+        font-size: 1rem;
 
         overflow: hidden;
         text-overflow: ellipsis;
