--- a/styles/_photographer.style.scss
+++ b/styles/_photographer.style.scss
@@ -39,7 +39,7 @@
     border: none;
 
     border-radius: 5px;
-    background-color: #901c1c;
+    background-color: $clr-primary;
 
     font-size: 1.25rem;
     font-weight: 700;
@@ -65,6 +65,8 @@
     border-radius: 50%;
     margin-left: auto;
     object-fit: cover;
+
+    @include shadow;
   }
 }
 
@@ -75,7 +77,6 @@
   align-items: center;
   gap: 2rem;
 
-  background-color: #fafafa;
   width: 100%;
   margin-bottom: 150px;
 
@@ -85,7 +86,7 @@
     position: relative;
 
     margin: 0 auto;
-    color: #901c1c;
+    color: $clr-primary;
     max-width: 100%;
 
     .videoWarning {
@@ -126,13 +127,14 @@
       display: flex;
       justify-content: space-between;
       align-items: baseline;
+      gap: 1rem;
 
       margin-top: 0.6rem;
 
       .desc__title {
         max-width: 250px;
 
-        font-size: 1.1rem;
+        font-size: 1.3rem;
 
         overflow: hidden;
         text-overflow: ellipsis;
@@ -143,16 +145,18 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 0.35rem;
+
+        font-size: 1.3rem;
+
         cursor: pointer;
 
-        .like__number {
-          font-size: 1rem;
-          margin-right: 0.35rem;
-          color: #000000;
+        &:focus {
+          @include focus;
         }
 
-        .like__icon {
-          font-size: 1rem;
+        .like__number {
+          color: #000000;
         }
       }
     }
@@ -171,7 +175,7 @@
   width: 376px;
   padding: 1.4rem 2rem;
 
-  background-color: #db8876;
+  background-color: $clr-secondary-light;
   border-radius: 5px;
 
   .like__container {
