--- a/styles/_variables.style.scss
+++ b/styles/_variables.style.scss
@@ -1,13 +1,13 @@
 $clr-primary: #901c1c;
 $clr-secondary: #d3573c;
+$clr-secondary-light: #db8876;
 $clr-gray: #525252;
 $clr-white: #fafafa;
 
 $color-text-light: $clr-gray;
 $color-background: white;
-
-$color-button: rgb(144, 28, 28);
-$color-button-hover: rgb(219, 136, 118);
+$color-button: $clr-primary;
+$color-button-hover: $clr-secondary-light;
 
 @mixin focus {
   outline: 3px solid $color-button-hover;
