--- a/styles/_contactForm.style.scss
+++ b/styles/_contactForm.style.scss
@@ -13,23 +13,25 @@
     height: 1.5rem;
     border: none;
     position: absolute;
-    top: 2rem;
-    right: 2rem;
+    top: 1.5rem;
+    right: 2.5rem;
     z-index: 12;
 
     cursor: pointer;
 
     &:focus {
-      border: 2px solid black;
+      @include focus(#{$clr-primary});
+      border-radius: 45%;
     }
   }
 
   img {
   }
 
-  h2 {
+  h1 {
     font-size: 2.5rem;
     font-weight: normal;
+    color: black;
   }
 }
 
@@ -68,7 +70,7 @@ form {
       }
 
       &:focus {
-        border: 2px solid black;
+        @include focus(#{$clr-primary});
       }
     }
   }
@@ -91,7 +93,7 @@ form {
     cursor: pointer;
 
     &:focus {
-      border: 2px solid black;
+      @include focus(#{$clr-white});
     }
   }
 }
