--- a/styles/_modal.style.scss
+++ b/styles/_modal.style.scss
@@ -22,7 +22,7 @@
   position: relative;
 
   border-radius: 5px;
-  background-color: #db8876;
+  background-color: $clr-secondary-light;
   width: 100%;
   max-width: 450px;
 
