--- a/styles/_customSelect.style.scss
+++ b/styles/_customSelect.style.scss
@@ -62,6 +62,9 @@ label {
   opacity: 1;
   visibility: visible;
   pointer-events: all;
+
+  animation-name: dropdownOpen;
+  animation-duration: 0.3s;
 }
 
 .custom-option {
@@ -113,4 +116,13 @@ hr {
 
 .open .arrow::after {
   transform: rotate(90deg);
+}
+
+@keyframes dropdownOpen {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
