--- a/styles/_lightbox.style.scss
+++ b/styles/_lightbox.style.scss
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 1);
-  // background-color: aquamarine;
+
   z-index: 10;
   overflow: auto;
 
@@ -34,8 +34,6 @@
   max-width: 1040px;
   width: 95%;
   margin: auto;
-
-  // background-color: bisque;
 }
 
 .lightbox__next,
@@ -49,10 +47,13 @@
   position: absolute;
   top: 50%;
   right: 3rem;
-  // right: 11.75rem;
 
   margin-top: -1.125rem;
   z-index: 11;
+
+  &:focus {
+    @include focus(#{$clr-secondary});
+  }
 }
 
 .lightbox__prev {
@@ -71,6 +72,11 @@
   top: 2rem;
   right: 3rem;
   z-index: 12;
+
+  &:focus {
+    @include focus(#{$clr-secondary});
+    border-radius: 45%;
+  }
 }
 
 .lightbox__container {
@@ -84,14 +90,13 @@
   max-width: 100%;
   min-height: 100%;
 
-  // background-color: blueviolet;
-
   img {
     max-width: 1040px;
     max-height: 1040px;
     width: 100%;
 
     height: auto;
+    object-fit: cover;
   }
 }
 
@@ -100,7 +105,7 @@
   width: 100%;
   max-width: 1040px;
   font-size: 1.5rem;
-  color: #901c1c;
+  color: $clr-primary;
 }
 
 .lightbox__loader {
