--- a/styles/_customSelect.style.scss
+++ b/styles/_customSelect.style.scss
@@ -1,6 +1,3 @@
-// $color-button: rgb(144, 28, 28);
-// $color-button-hover: rgb(219, 136, 118);
-
 .dropdown-menu__container {
   display: flex;
   align-items: center;
@@ -9,53 +6,54 @@
 
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
 
-label {
-  min-width: fit-content;
+  label {
+    min-width: fit-content;
+  }
 }
 
 .select-wrapper {
   position: relative;
   user-select: none;
   width: 170px;
+
+  outline: none;
 }
 
 .select {
   position: relative;
   display: flex;
   flex-direction: column;
-}
 
-.select__trigger {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
+  .select__trigger {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
 
-  background: $color-button;
-  cursor: pointer;
+    background: $color-button;
+    cursor: pointer;
 
-  padding: 1rem 1rem;
-  font-size: 1rem;
-  color: white;
-}
+    padding: 1rem 1rem;
+    font-size: 1rem;
+    color: white;
+  }
 
-.custom-options {
-  position: absolute;
-  display: block;
-  top: 100%;
-  left: 0;
-  right: 0;
-  border: 2px solid $color-button;
-  border-top: 0;
-  background: $color-button;
+  .custom-options {
+    position: absolute;
+    display: block;
+    top: 100%;
+    left: 0;
+    right: 0;
+    border: 2px solid $color-button;
+    border-top: 0;
+    background: $color-button;
 
-  transition: all 0.5s;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  z-index: 2;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    z-index: 2;
+  }
 }
 
 .select.open .custom-options {
@@ -65,6 +63,19 @@ label {
 
   animation-name: dropdownOpen;
   animation-duration: 0.3s;
+
+  .underline {
+    text-decoration: underline;
+    font-weight: 700;
+    margin-right: 2px;
+  }
+}
+
+.select-wrapper {
+  &:focus {
+    .select.open .custom-options {
+    }
+  }
 }
 
 .custom-option {
@@ -75,7 +86,6 @@ label {
   font-weight: 300;
   color: white;
   cursor: pointer;
-  transition: all 0.5s;
 }
 
 hr {
@@ -94,6 +104,8 @@ hr {
   color: $color-button;
   // background-color: #305c91;
 }
+
+// Arrow
 
 .arrow {
   position: relative;
