--- a/styles/_lightbox.style.scss
+++ b/styles/_lightbox.style.scss
@@ -88,7 +88,8 @@
   position: relative;
   margin: 2rem 6rem;
   max-width: 100%;
-  min-height: 100%;
+  // min-height: 100%;
+  min-height: 500px;
 
   img {
     max-width: 1040px;
