--- a/styles/_contactForm.style.scss
+++ b/styles/_contactForm.style.scss
@@ -20,7 +20,8 @@
     cursor: pointer;
 
     &:focus {
-      @include focus(#{$clr-primary});
+      // @include focus(#{$clr-primary});
+      @include no-focus;
       border-radius: 45%;
     }
   }
